[metadata]
name = mulpyplexer
description = A module that multiplexes interactions with lists of python objects.
long_description = file: README.md
long_description_content_type = text/markdown
author = Yan Shoshitaishvili
author_email = yans@yancomm.net
maintainer = Yan Shoshitaishvili
maintainer_email = yans@yancomm.net
version = 0.9
license = BSD
license_files = LICENSE

[options]
py_modules = mulpyplexer
